--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "antd": "^5.4.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
+    "react-icons": "^4.8.0",
+    "react-parallax-tilt": "^1.7.125",
+    "react-pdf": "^6.2.2",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.1",
+    "react-tsparticles": "^2.9.3",
+    "reactstrap": "^9.1.8",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-pdf": "^6.2.0",
+    "@types/styled-components": "^5.1.26"
   }
 }
